src/styles/dog-about.module.scss
@use "@styles/_theme.module.scss" as Theme;

.dogTitle {
  font-weight: 700;
  margin: 1rem 0;
}
.breeder {
  font-style: italic;
  font-weight: 400;
  color: lighten(Theme.$black, 20%);
}
article.mainDog {
  display: flex;
  align-items: center;
  margin: 0 auto;
  padding: 1rem;
  flex-direction: column;
}

.dogInfoList {
  font-size: Theme.$h4;
  font-size: Theme.$h3;
  margin-left: Theme.$spaceBetweenElements;
  margin-top: Theme.$spaceBetweenElements;
  width: 100%;
  height: fit-content;
  @include Theme.mediaQuery(Theme.$tabletViewport) {
    margin-left: unset;
    max-width: Theme.$Headshots_Lg;
    padding: 0;
  }
  thead {
    font-weight: 700;
    text-align: center;
  }
  td:nth-child(odd) {
    line-height: 1.5em;
  }
}
.col1 {
  width: 40%;
}
.col2 {
  width: 60%;
}

@include Theme.mediaQuery(Theme.$LgPhoneViewport) {
  .dogInfoList {
    display: block;
    width: 100%;
    margin: 0 auto;
    tbody {
      display: block;
      width: 100%;
      height: fit-content;
      text-align: center;
      padding: 0.5rem;
    }
    thead {
      display: block;
      margin: 0 auto;
      width: 100%;
      text-align: center;
      padding: 0.5rem;
      margin-top: 1rem;
    }
    th {
      display: block;
      margin: 0 auto;
      width: 100%;
      text-align: center;
      padding: 0.5rem;
      margin-top: 1rem;
    }
    td {
      display: block;
      margin: 0 auto;
      width: 100%;
      text-align: center;
      padding: 0.5rem;
    }
    tr {
      display: block;
      width: 100%;
      height: fit-content;
      text-align: center;
      padding: 0.5rem;
    }
    .col1,
    .col2 {
      display: block;
      width: 100%;
      height: fit-content;
      text-align: center;
      padding: 0.5rem;
      &:nth-child(even) {
        height: 1em;
      }
    }
  }
}

.attentionGetter {
  display: flex;
  @include Theme.mediaQuery(Theme.$tabletViewport) {
    flex-direction: column;
    align-items: center;
  }
}

.Group_Photos {
  max-width: Theme.$Group_Photos;
  border-radius: Theme.$buttonRadius;
  aspect-ratio: 4/3;
  @include Theme.imageHover(black);
  @include Theme.mediaQuery(Theme.$tabletViewport) {
    width: 100%;
    height: auto;
    margin-right: unset;
  }
}
.partner {
  &Data {
    color: Theme.$lightPrimary;
    display: flex;
    border-radius: Theme.$bigButtonRadius;
    padding: Theme.$spaceBetweenElements;
    margin-top: Theme.$spaceBetweenElements;
    background-color: Theme.$darkPrimary;
    align-items: center;
    @include Theme.mediaQuery(Theme.$tabletViewport) {
      flex-direction: column;
      align-items: center;
    }
    @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
      width: 100%;
      flex-direction: column;
      align-items: center;
    }
  }

  &Visuals {
    color: Theme.$lightSecondaryGreen;
    max-width: 600px;
    margin: Theme.$spaceBetweenElements;
    margin-bottom: Theme.$spaceBetweenElements;
    @include Theme.mediaQuery(Theme.$LgPhoneViewport) {
      align-items: center;
      justify-content: center;
      flex-direction: column;
    }
    & > * {
      color: Theme.$lightSecondaryGreen;
    }
  }

  &LastLitter {
    text-align: center;
    color: Theme.$lightPrimary;
    margin-top: calc(Theme.$spaceBetweenElements/2);
  }
  &Photo {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    img:not([class^="breeder-line"]) {
      @include Theme.imageHover(black);
    }
  }
  &Breeder {
    color: Theme.$lightPrimary;
    margin-top: Theme.$spaceBetweenElements;
    text-align: center;
  }
}

.Headshots_Lg {
  margin-top: calc(1rem + 9px);
  box-shadow: revert;
  &:hover {
    transform: translateY(0);
    box-shadow: revert;
  }
  &:active {
    transform: translateY(0);
  }
}

.Headshots_Sm {
  @include Theme.mediaQuery(Theme.$tabletViewport) {
    margin-top: Theme.$spaceBetweenElements;
  }
}

